[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "Eztorch"
authors = [
  { name="Julien Denize", email="julien.denize@hotmail.fr" },
]
description = "Library to perform image and video self supervised learning."
keywords = [
  "computer vision",
  "deep learning",
  "representation",
  "contrastive",
  "image",
  "video",
  "action",
  "spotting",
  "pytorch",
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: GPU",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Software Development :: Libraries",
]
dynamic = [
  "dependencies",
  "readme",
  "version",
]

[project.urls]
"Homepage" = "https://github.com/juliendenize/eztorch"
"Bug Tracker" = "https://github.com/juliendenize/eztorch/issues"
"Download" = "https://github.com/juliendenize/eztorch"
"Source Code" = "https://github.com/juliendenize/eztorch"

[tool.setuptools]
zip-safe = true
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "eztorch.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = ["docs*", "test*", "examples*"]
namespaces = false
